add keyshort function

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,6 +8,11 @@
     <string name="button_hardware">硬件检测</string>
     <string name="button_upgrade">固件升级</string>
     <string name="button_checksum">校验</string>
+    
+    <string name="setting_screen_info">屏幕尺寸</string>
+    <string name="setting_screen_mode">屏幕尺寸</string>
+    <string name="setting_clear_cal">清除校验</string>
+     <string name="setting_reset">重置</string>
 
     <string-array name="screen_size">
         <item>67(256*128)</item>
@@ -66,6 +71,12 @@
     <string name="msg_open_boot_succ">打开启动设备成功</string>
     <string name="msg_device_attach">接入设备</string>
     <string name="msg_device_detach">拔出设备</string>
+    <string name="msg_key_set_finish_index">完成组:</string>
+        <string name="msg_shortcut_bound_err">坐标不合理</string>
+    <string name="msg_shortcut_write_err">快捷键设定失败</string>
+      <string name="msg_shortcut_should_finish">必须完成一组操作后才可以切换模式</string>
+        <string name="msg_shortcut_write_succ">快捷键设定成功</string>
+    
     <string name="menu_title_x_all">X-全部</string>
     <string name="menu_title_y_all">Y-全部</string>
     <string name="menu_title_threshold">设置阈值</string>
@@ -80,7 +91,6 @@
     <string name="upgrade_ensure">确认升级?</string>
     <string name="ok">确认</string>
     <string name="cancel">取消</string>
-    
     <string name="cal_timeout">超时</string>
     <string name="cal_working">正在采集</string>
     <string name="cal_touch_notice">请按屏幕图案上的点</string>
@@ -88,7 +98,14 @@
     <string name="cal_touch_exit">校验成功\n点击退出</string>
     <string name="cal_finish">校准完成</string>
     <string name="cal_err">校准失败\n点击退出</string>
+    <string name="shortcut_note_example">红色圈为示意,请点击实际快捷键的对应位置,点击方向按钮选择方向,所有操作完成后,点击OK</string>
+    <string name="shortcut_note_tip">请用触摸笔垂直点击十字星中心,进行校准</string>
 
-     <string name="shortcut_note_example">红色圈为示意,请点击实际快捷键的对应位置</string>
-      <string name="shortcut_note_tip">请用触摸笔垂直点击十字星中心,进行校准</string>
+    <string name="shortcut_up">\t↑\t</string>
+    <string name="shortcut_down">\t↓\t</string>
+    <string name="shortcut_left">\t←\t</string>
+    <string name="shortcut_right">\t→\t</string>
+    <string name="shortcut_m">OK\t</string>
+  
+
 </resources>
